@@ -2693,8 +2693,8 @@ HKL WINAPI ActivateKeyboardLayout(HKL,UINT);
 BOOL WINAPI AdjustWindowRect(LPRECT,DWORD,BOOL);
 BOOL WINAPI AdjustWindowRectEx(LPRECT,DWORD,BOOL,DWORD);
 BOOL WINAPI AnyPopup(void);
-BOOL WINAPI AppendMenuA(HMENU,UINT,UINT,LPCSTR);
-BOOL WINAPI AppendMenuW(HMENU,UINT,UINT,LPCWSTR);
+BOOL WINAPI AppendMenuA(HMENU,UINT,UINT_PTR,LPCSTR);
+BOOL WINAPI AppendMenuW(HMENU,UINT,UINT_PTR,LPCWSTR);
 UINT WINAPI ArrangeIconicWindows(HWND);
 BOOL WINAPI AttachThreadInput(DWORD,DWORD,BOOL);
 HDWP WINAPI BeginDeferWindowPos(int);
